--- a/business-central/breadcrumb/toc.yml
+++ b/business-central/breadcrumb/toc.yml
@@ -6,9 +6,6 @@
       tocHref: /dynamics365/business-central/
       topicHref: /dynamics365/business-central/index
       items:
-        - name: Business Central Developer og IT-pro
+        - name: Þróun og stjórnun Business Central
           tocHref: /dynamics365/business-central/dev-itpro
           topicHref: /dynamics365/business-central/dev-itpro/index
-        - name: Accountant Hub
-          tocHref: /dynamics365/accountants/
-          topicHref: /dynamics365/accountants/index
