--- a/business-central/ui-mobile-faq.yml
+++ b/business-central/ui-mobile-faq.yml
@@ -9,14 +9,14 @@ metadata:
   ms.tgt_pltfrm: na
   ms.workload: na
   ms.search.keywords: phone, tablet
-  ms.date: 04/01/2021
+  ms.date: 10/25/2021
   ms.author: edupont
-  ms.openlocfilehash: 81887822a3163a7fee0d027ac1969545990f749a
-  ms.sourcegitcommit: f9a190933eadf4608f591e2f1b04c69f1e5c0dc7
-  ms.translationtype: HT
+  ms.openlocfilehash: f0d31833373014ac5f1f089537bf03091540e223
+  ms.sourcegitcommit: a9e2aaee735870af566db68532cfa697347d68e0
+  ms.translationtype: MT
   ms.contentlocale: is-IS
-  ms.lasthandoff: 05/28/2021
-  ms.locfileid: "6115968"
+  ms.lasthandoff: 11/04/2021
+  ms.locfileid: "7752531"
 title: Algengar spurningar um farsímaforrit
 summary: "Þessi grein svarar spurningum sem reynslumiklir notendur okkar spyrja oft um varðandi farsímaforritið fyrir [!INCLUDE [prod_short](includes/prod_short.md)].  \n"
 sections:
@@ -85,4 +85,7 @@ sections:
   - question: >
       Get ég tengt forritið við innanhússlausnina?
     answer: "Já, þú getur það! Það er örlítið mismunandi leið til að skrá sig inn, það er allt og sumt. Frekari upplýsingar eru í [Notkun Business Central á staðnum?](install-mobile-app.md#using-business-central-on-premises).  \n"
+  - question: >
+      Getur gestanotandi notað forritið til að opna Business Central-lausnina?
+    answer: "Fj. Gestanotendur eru notendur sem annar Azure Active Directory (AD) leigjandi en þinn hefur boðið. Í því tilviki mun forritið auðkenna hjá Azure AD leigjanda gestanotanda og reyna að opna endastöð Business Central í þeim leigjanda í staðinn fyrir þínum.  \n"
 additionalContent: "\n## <a name=\"see-also\"></a>Sjá einnig .\n\n[Nota Business Central á fartækinu þínu](install-mobile-app.md)  \n[Setja upp Business Central-forritið fyrir Microsoft Teams](across-install-app-for-teams.md)  \n\n[!INCLUDE[footer-include](includes/footer-banner.md)]"
