--- a/business-central/ui-search-filter-faq.yml
+++ b/business-central/ui-search-filter-faq.yml
@@ -10,7 +10,7 @@ metadata:
   ms.author: mikebc
   ms.openlocfilehash: 58c0e15d418bdf8743acdbbe14eb01243bd30a14
   ms.sourcegitcommit: ef80c461713fff1a75998766e7a4ed3a7c6121d0
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: is-IS
   ms.lasthandoff: 02/15/2022
   ms.locfileid: "8138233"
