--- a/business-central/faq-electronic-invoicing.yml
+++ b/business-central/faq-electronic-invoicing.yml
@@ -3,30 +3,32 @@ metadata:
   title: Algengar spurningar um rafrænar reikningsfærslur
   description: Fáðu svör um skjalaskiptaþjónustu og studdar útgáfur af PEPPOL.
   ms.topic: faq
-  ms.openlocfilehash: 0351a756d8b07eee489ff5457c8463f8587dded4
-  ms.sourcegitcommit: ef80c461713fff1a75998766e7a4ed3a7c6121d0
+  author: edupont04
+  ms.author: edupont
+  ms.openlocfilehash: 42e9278371ac9736d9d6a0d4b8e288fbe295c863
+  ms.sourcegitcommit: 61fdaded30310ba8bdf95f99e76335372f583642
   ms.translationtype: MT
   ms.contentlocale: is-IS
-  ms.lasthandoff: 02/15/2022
-  ms.locfileid: "8136219"
+  ms.lasthandoff: 11/04/2022
+  ms.locfileid: "9744816"
 title: Algengar spurningar um rafrænar reikningsfærslur
-summary: "Innbyggða skjalaskiptiþjónustan sendir rafræna reikninga á TradeShift sem er þjónustuaðili sem sendir rafræna reikninga til PEPPOL eða viðtakenda NemHandel. En þjónustan styður takmarkaðan fjölda af útgáfum.   \n\nÞetta algengu spurningar svara sumum af helstu spurningunum um rafræna reikningsfærslu.  \n"
+summary: "Byggðasamlagsins um skjalavörslu sendir rafrænan reikning til Vörumervaktar, þjónustuaðila sem leggur fram rafræna reikninga til PEPPOL eða NemHandel viðtakenda. En þjónustan styður takmarkaðan fjölda af útgáfum.   \n\nÞetta algengu spurningar svara sumum af helstu spurningunum um rafræna reikningsfærslu.  \n"
 sections:
 - name: Almennt
   questions:
   - question: Hvert er vandamálið?
     answer: Innbyggður stuðningur PEPPOL notar API frá TradeShift. En það API styður ekki nýrri útgáfur af PEPPOL.
   - question: Hver er Síðasta útgáfa af PEPPOL sem TradeShift API studdi?
-    answer: Síðasta útgáfa af PEPPOL sem TradeShift API studdi er  **PEPPOL BIS 2.1**.
+    answer: Í síðustu útgáfu af PEPPOL sem studd er af Vörumshift API er **PEPPOL BIS 2,1**.
   - question: Hver er síðasta útgáfa af PEPPOL sem Business Central studdi?
-    answer: Nýjasta útgáfan af PEPPOL sem sjálfgefin útgáfa af Business Central styður er  **PEPPOL BIS 3.0**. Við munum halda fyrirliggjandi skjalaskiptaþjónustu út frá TradeShift svo framarlega sem TradeShift styðji núverandi API. Þar að auki höldum við áfram að styðja snið rafrænna reikninga sem eru þegar studd.
+    answer: Í síðustu útgáfu af PEPPOL sem studd er af sjálfgefinni útgáfu af Business Central er **PEPPOL BIS 3,0**. Við munum halda fyrirliggjandi skjalaskiptaþjónustu út frá TradeShift svo framarlega sem TradeShift styðji núverandi API. Þar að auki höldum við áfram að styðja snið rafrænna reikninga sem eru þegar studd.
 - name: " Forrit"
   questions:
   - question: Eru til forrit sem geta hjálpað okkur með rafræna reikningsfærslu?
     answer: >
       Já! Eftirfarandi listi inniheldur dæmi um forrit fyrir Business Central sem styðja rafræna reikningsfærslu á nýjustu sniðunum. Athugið að þetta er ekki tæmandi listi:
 
-      - [Pagero - E-Invoicing app (Danmörk, Þýskaland, Finnland, Frakkland, Noregur, Spánn, Svíþjóð, Bretland)](https://appsource.microsoft.com/product/dynamics-365-business-central/pubid.pagero-4798327%7Caid.pagero%7Cpappid.92b90d1d-ecde-4d26-a95b-1d57720e79c6)
+      - [Pagero-E-reikningsfæra App (Belgía, Danmörk, Þýskaland, Finnland, Frakkland, Ítalía, Luxemburg, Noregur, Sádi-Arabía, Singapúr, Spánn, Svíþjóð, Bretland, USA)](https://appsource.microsoft.com/product/dynamics-365-business-central/pubid.pagero-4798327%7Caid.pagero%7Cpappid.92b90d1d-ecde-4d26-a95b-1d57720e79c6)
 
       - [Oseberg Solutions - E-invoice PEPPOL Bis (Noregur)](https://appsource.microsoft.com/product/dynamics-365-business-central/PUBID.oseberg_solutions%7CAID.oseberg_peppol%7CPAPPID.49206e10-c889-400d-8465-bde6555e00fc)
 
@@ -36,7 +38,7 @@ sections:
 
       - [NAVlab - FTE LITE CLOUD (Ítalía)](https://appsource.microsoft.com/product/dynamics-365-business-central/PUBID.navlab-1990684%7CAID.felight%7CPAPPID.a239eef8-4446-4379-a0af-e0f8f1e7f260?tab=Overview)
 
-      - [AppVision - Electronic Invoice fyrir Ungverjaland](https://appsource.microsoft.com/product/dynamics-365-business-central/PUBID.appvision-5226274%7CAID.hungarian_electronic_invoice%7CPAPPID.f5891011-91e3-416e-92c7-db21f1f3a939?tab=Overview) 
+      - [AppVision - Electronic Invoice fyrir Ungverjaland](https://appsource.microsoft.com/product/dynamics-365-business-central/PUBID.appvision-5226274%7CAID.hungarian_electronic_invoice%7CPAPPID.f5891011-91e3-416e-92c7-db21f1f3a939?tab=Overview)
 
       - [Estonian Dynamics Partners - Telema EDI (Eistland)](https://appsource.microsoft.com/product/dynamics-365-business-central/PUBID.estonian_dynamics_partners%7CAID.telema-edi%7CPAPPID.0f6cfaa0-c4d6-49af-a644-4194e69420be)
 
@@ -50,5 +52,5 @@ sections:
 - name: B2G krafa í Þýskalandi
   questions:
   - question: Hvað með B2G skilyrði í Þýskalandi?
-    answer: Fyrir Business Central notendur sem eru með viðskiptavini hjá þýska ríkinu og þurfa B2G reikninga, verða frá og með 27. nóvember 2020 að senda reikninga á staðbundnum sniðum, svo sem *XRechnung* eða *ZUGFeRD*.  Þetta verður stutt af forritum á borð við  [Belware XRechnung](https://appsource.microsoft.com/product/dynamics-365-business-central/PUBID.belwaregmbh2%7CAID.connector_365_xrechnung%7CPAPPID.0e71f27e-d331-4045-a643-c2777a797cc4?tab=Overview) eða [Pagero E-Invoicing](https://appsource.microsoft.com/product/dynamics-365-business-central/pubid.pagero-4798327%7Caid.pagero%7Cpappid.92b90d1d-ecde-4d26-a95b-1d57720e79c6). 
+    answer: Fyrir Business Central notendur sem eru með viðskiptavini hjá þýska ríkinu og þurfa B2G reikninga, verða frá og með 27. nóvember 2020 að senda reikninga á staðbundnum sniðum, svo sem *XRechnung* eða *ZUGFeRD*.  Þetta verður stutt af forritum eins og [belware XRechnung](https://appsource.microsoft.com/product/dynamics-365-business-central/PUBID.belwaregmbh2%7CAID.connector_365_xrechnung%7CPAPPID.0e71f27e-d331-4045-a643-c2777a797cc4?tab=Overview) eða [Pagero E-reikningsfærslu](https://appsource.microsoft.com/product/dynamics-365-business-central/pubid.pagero-4798327%7Caid.pagero%7Cpappid.92b90d1d-ecde-4d26-a95b-1d57720e79c6).
 additionalContent: "## <a name=\"next-steps\"></a>Næstu skref\nFinndu tengdar upplýsingar hér: \n  - [Senda rafræn skjöl](sales-how-to-send-electronic-documents.md)"
