--- a/business-central/across-faq.yml
+++ b/business-central/across-faq.yml
@@ -5,7 +5,7 @@ metadata:
   author: edupont04
   ms.topic: faq
   ms.search.keywords: 'FAQ, email, Microsoft 365, subscription, subscribe, trial, plan, application area, experience, support, buy, upgrade, extend'
-  ms.date: 09/07/2022
+  ms.date: 07/14/2023
   ms.author: edupont
 title: Algengar spurningar um notkun Business Central
 summary: |
@@ -28,9 +28,9 @@ sections:
       - question: |
           Hvert leita ég ef ég er með spurningar?
         answer: |
-          Ef spurningar vakna um [!INCLUDE[prod_short](includes/prod_short.md)] sem ekki er hægt að finna svar við í þessu skjali er hægt að spyrja Business Central-samfélagið. Frekari upplýsingar er að finna í [Dynamics 365 Business Central samfélaginu](https://community.dynamics.com/business).  
+          Ef spurningar vakna um [!INCLUDE[prod_short](includes/prod_short.md)] sem ekki er hægt að finna svar við í þessu skjali er hægt að spyrja Business Central-samfélagið. Frekari upplýsingar á  [Dynamics 365 Business Central  samfélagsmiðlum](https://community.dynamics.com/forums/thread/?groupid=e78817ab-a926-4d31-96cc-aef040a4eb04).  
 
-          Frá heimasíðu samfélagsins er einnig hægt að finna tengla á bloggin okkar þar er einnig hægt að finna ábendingar og ráð. Frekari upplýsingar eru á [Microsoft Dynamics 365 Business Central á bloggsíðu Dynamics 365](https://cloudblogs.microsoft.com/dynamics365/it/product/business-central/) og eldri [Dynamics 365 Business Central bloggsíðu](https://community.dynamics.com/business/b/financials).  
+          Frá heimasíðu samfélagsins er einnig hægt að finna tengla á bloggin okkar þar er einnig hægt að finna ábendingar og ráð. Frekari upplýsingar hjá  [Microsoft  Dynamics 365 Business Central  á Dynamics 365 blogginu](https://cloudblogs.microsoft.com/dynamics365/it/product/business-central/)  og eldri  [Dynamics 365 Business Central  bloggin](https://community.dynamics.com/blogs/?blogid=57bdb1f3-851d-4406-a81a-508fef896fc2&groupid=e78817ab-a926-4d31-96cc-aef040a4eb04).  
 
           Að lokum geturðu haft samband við [!INCLUDE[prod_short](includes/prod_short.md)] endursöluaðilann þinn. Frekari upplýsingar eru í [Hvernig fæ ég tæknilega aðstoð?](/dynamics365/business-central/across-faq#how-do-i-get-technical-support-for-business-central) hlutanum og [Hvernig finn ég endursöluaðila?](#how-do-i-find-a-reselling-partner).  
       - question: |
@@ -57,11 +57,11 @@ sections:
         answer: |
           [!INCLUDE[prod_short](includes/prod_short.md)] er selt í gegnum samstarfsaðila og þú ættir að hafa samband við endursöluaðila til að fá aðstoð vegna tæknilegra vandamála. Ef [!INCLUDE[prod_short](includes/prod_short.md)] samstarfsaðilinn þinn getur þá ekki leyst úr vandanum sendar hann inn þjónustubeiðni til Microsoft.  
 
-          Frekari upplýsingar eru í [Hjálp og notendaþjónusta](product-help-and-support.md) og [Hvernig finn ég endursöluaðila?](#how-do-i-find-a-reselling-partner).  
+          Læra meira at  [hjálpa og styðja](product-help-and-support.md)  og í því  [Hvernig finn ég endursala félaga?](#how-do-i-find-a-reselling-partner) kafla.  
       - question: |
           Hvar er hnappurinn til að vista?
         answer: |
-          enginn *vista* hnappur á síðunum eins og í öðrum forritum sem þú hugsanlega kannast við. Í [!INCLUDE[prod_short](includes/prod_short.md)] eru breytingar sem þú gerir á reit vistaðar sjálfkrafa um leið og þú ferð í næsta reit eða lokar síðunni, svo lengi sem engar villur eru til staðar. Þegar gerðar eru breytingar á reit og farið er í annan reit sést textinn **Vistar** efst í hægra horninu. Hann breytist í **Vistað** fljótlega ef engar villur koma upp. Ef villa kemur upp breytist textinn í **Ekki vistað**.  
+          Það er enginn  *Vista*  hnapp á síðum eins og í öðrum forritum sem þú gætir kannast við. Í [!INCLUDE[prod_short](includes/prod_short.md)] eru breytingar sem þú gerir á reit vistaðar sjálfkrafa um leið og þú ferð í næsta reit eða lokar síðunni, svo lengi sem engar villur eru til staðar. Þegar gerðar eru breytingar á reit og farið er í annan reit sést textinn **Vistar** efst í hægra horninu. Hann breytist í **Vistað** fljótlega ef engar villur koma upp. Ef villa kemur upp breytist textinn í **Ekki vistað**.  
       - question: |
           Hvar finn ég þetta línunúmer?
         answer: |
