--- a/business-central/ui-search-filter-faq.yml
+++ b/business-central/ui-search-filter-faq.yml
@@ -1,16 +1,16 @@
 ### YamlMime:FAQ
 metadata:
-  title: Um leit og síun í Business Central
+  title: Um leit og afmörkun í Business Central
   description: Svarar algengum spurningum um leit og síun.
   author: brentholtorf
   ms.topic: faq
   ms.reviewer: bholtorf
   ms.search.keywords: 'keyboarding, productivity, how do i, filter pane'
   ms.search.form: TellMe
-  ms.date: 04/01/2021
+  ms.date: 04/19/2024
   ms.author: bholtorf
   ms.service: dynamics-365-business-central
-title: Algengar spurningar um leit og síun
+title: Leit og afmörkun algengra spurninga
 summary: Þessi grein svarar algengum spurningum sem þú gætir haft um leit og síun í Business Central.
 sections:
   - name: Hunsað
@@ -50,7 +50,7 @@ sections:
       - question: |
           Hvernig skoða ég hvernig leitarorðin mín hafa verið notuð í reitum í listunum?
         answer: |
-          Þegar leitarskilyrðin eru færð inn í leitargluggann er hægt að skoða nákvæm leitarskilyrði og hvaða svæði þau hafa verið jöfnuð með með því að opna síðueftirlitssvæðunum (<kbd>CTRL</kbd>+<kbd>Alt</kbd>+<kbd>F1</kbd>) og velja  **flipann síun**  síðu.
+          Þegar leitarskilmálar hafa verið færðir inn í leitargluggann er hægt að skoða nákvæmlega leitarskilyrðin og hvaða reiti þeir hafa verið notaðir með því að opna síðuskoðunarsvæðið (<kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>F1</kbd>) og velja **flipann Síðuafmarkanir** .
       - question: |
           Get ég gert eitthvað við "leita að röðum tekur of lengi" skilaboð?
         answer: |
@@ -60,11 +60,11 @@ sections:
       - question: |
           Mun Microsoft lengja reynslu síunarsvæðisins?
         answer: |
-          Við hjá Microsoft erum stöðugt að hlusta á viðbrögð frá fjölbreyttu samfélagi notenda okkar og starfa á efstu tillögum samfélagsins. Ef þú hefur áhuga á að lengja síunarsvæðið til fleiri myndaþátta og fleiri tegundir lista eða hafa góðan hugmynd um hvernig á að bæta það, bæta við hugmynd eða kjósa um núverandi hugmyndir á [aka.ms/BusinessCentralIdeas](https://aka.ms/businesscentralideas).
+          Við hjá Microsoft erum stöðugt að hlusta á viðbrögð frá fjölbreyttu samfélagi notenda okkar og starfa á efstu tillögum samfélagsins. Ef áhugi er fyrir því að lengja afmörkunarsvæðið við fleiri skjámyndarþætti og fleiri gerðir lista eða hafa góða hugmynd um hvernig á að bæta henni, bæta við hugmynd eða kjósa þær hugmyndir sem fyrir eru [aka.ms/BusinessCentralIdeas](https://aka.ms/businesscentralideas).
       - question: |
           Hvernig breyti ég úttaki fyrir skiltáknslykil tugabrots á talnaborðinu?
         answer: |
-          Úttaksstafur fyrir skiltákn tugabrots er sjálfgefið ákvarðað af svæðisstillingunni í Business Central, sem er stillt á síðunni **Mínar stillingar**. Hægt er að skipta því tímabundið yfir í tímabil (.) með því að velja  <kbd>Aðgreiningarlykla</kbd>+<kbd>með Alt</kbd>  -aukastöfum á takkanum. Veldu  <kbd>Alt</kbd>+<kbd>tugakerfi</kbd>  aftur til að skipta aftur. Frekari upplýsingar eru í [Að stilla skiltákn tugabrots sem á að nota með talnalyklaborðum](ui-enter-data.md#decimal).
+          Úttaksstafur fyrir skiltákn tugabrots er sjálfgefið ákvarðað af svæðisstillingunni í Business Central, sem er stillt á síðunni **Mínar stillingar**. Hægt er að skipta honum tímabundið í tímabil (.) með því að <kbd>velja lyklana Fyrir alt</kbd>+<kbd>aukastafi</kbd> á lyklaborðinu. Skiltákn <kbd>alts</kbd>+<kbd>aukastafs</kbd> er valið aftur til að skipta aftur. Frekari upplýsingar eru í [Að stilla skiltákn tugabrots sem á að nota með talnalyklaborðum](ui-enter-data.md#decimal).
 additionalContent: |
 
   ## Sjá einnig .
